fix overflow of the aside

--- a/embark-ui/src/containers/EditorContainer.css
+++ b/embark-ui/src/containers/EditorContainer.css
@@ -16,7 +16,7 @@
   background-color: #20a8d8;
 }
 
-.explorer-aside-card {
+.editor-aside {
   position: absolute;
   top: 0;
   left: 0;
